# wgeo

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  example.c  example.cpp  example_shared.c
include/wgeo/: wgeo.h
src/: CMakeLists.txt  api.cpp  api.hpp  get_wap.cpp  get_wap.hpp  wap_data.cpp  wap_data.hpp  wgeo.cpp
tests/: CMakeLists.txt  api_success.cpp  functional.cpp
tools/: build.bat  build.sh  test.bat  test.sh
