cmake_minimum_required(VERSION 3.10)
project(wgeo VERSION 1.0 DESCRIPTION "Wifi based geolocation library")

set(CMAKE_CXX_STANDARD 20)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("Building DEBUG distribution")
    add_compile_definitions(DEBUG)
    SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g")
endif (CMAKE_BUILD_TYPE STREQUAL "Debug")

add_subdirectory(src)
if(DEFINED BUILD_TESTS)
    message("Building test suite")
    add_subdirectory(tests)
endif(DEFINED BUILD_TESTS)
if(DEFINED BUILD_EXAMPLES)
    message("Building examples")
    add_subdirectory(examples)
endif(DEFINED BUILD_EXAMPLES)